--- a/web/css/main.css
+++ b/web/css/main.css
@@ -293,12 +293,31 @@ textarea {
   background-color: #EFF7FF;
 }
 
+.output-div {
+  display: flex;
+  flex-direction: column;
+  width: 75%;
+  max-width: 75%;
+  height: 75%;
+  max-height: 75%;
+}
+
+.output-header {
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+.output-header-text {
+  display: flex;
+}
+
 .header-text {
   font-size: x-large;
   color: #336699;
 }
 
 .body-text {
+  display: flex;
   font-size: 100px;
   color: #222222;
 }
@@ -325,6 +344,44 @@ textarea {
 }
 
 .textarea-readonly {
-  flex-grow: 20;
+  display: flex;
+  flex-grow: 2;
   resize: none;
+  padding: 0.5rem;
+}
+
+#search-box {
+  display: flex;
+  background-image: url('/css/searchicon.png'); /* Add a search icon to input */
+  background-size: 20px;
+  background-position: 10px 12px; /* Position the search icon */
+  background-repeat: no-repeat; /* Do not repeat the icon image */
+  width: 80%; /* Full-width */
+  font-size: 16px; /* Increase font-size */
+  padding: 12px 20px 12px 40px; /* Add some padding */
+  border: 1px solid #ddd; /* Add a grey border */
+  margin-bottom: 12px; /* Add some space below the input */
+}
+
+#myTable {
+  display: flex;
+  border-collapse: collapse; /* Collapse borders */
+  width: 80%; /* Full-width */
+  border: 1px solid #ddd; /* Add a grey border */
+  font-size: 18px; /* Increase font-size */
+}
+
+#myTable th, #myTable td {
+  text-align: left; /* Left-align text */
+  padding: 12px; /* Add padding */
+}
+
+#myTable tr {
+  /* Add a bottom border to all table rows */
+  border-bottom: 1px solid #ddd;
+}
+
+#myTable tr.header, #myTable tr:hover {
+  /* Add a grey background color to the table header and on hover */
+  background-color: #f1f1f1;
 }
