Fixed layout, added sorting

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -294,6 +294,11 @@ textarea {
   row-gap: 30px;
 }
 
+.header-text {
+  font-size: x-large;
+  color: #336699;
+}
+
 .body-text {
   display: flex;
   font-size: 100px;
@@ -389,5 +394,5 @@ th {
 
 #output-table tr.header, #output-table tr:hover {
   /* Add a grey background color to the table header and on hover */
-  background-color: #336699;
+  background-color: #FF5700;
 }
