--- a/web/css/normalize.css
+++ b/web/css/normalize.css
@@ -197,6 +197,8 @@ button,
 [type="reset"],
 [type="submit"] {
   -webkit-appearance: button;
+  margin-left: 10px;
+  height: max-content;
 }
 
 /**
