Make the thead of the table always visible when scrolling. Make it stick to the top of the table

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -24,6 +24,11 @@ body {
   flex-direction: column;
 }
 
+thead {
+  position: sticky;
+  top: 0;
+}
+
 /*
  * Remove text-shadow in selection highlight:
  * https://twitter.com/miketaylr/status/12228805301
